--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
         <title>Document</title>
 </head>
 <body>
-        
+        <main data-theme="dark">
+                <header class="flex align-center justify-between">
+                        <h1>Calc.Js</h1>
+                        <button id="themeSwitcher">Switch Theme Dark / Light</button>
+                </header>
+                <input type="text" id="input">
+                <div id="keys">
+                        <button id="clear">C</button>
+                        <button class="charKey" date-value=" ( ">(</button>
+                        <button class="charKey" date-value=" ) ">)</button>
+                        <button class="charKey" date-value=" / ">/</button>
+                        <button class="charKey" date-value=" 7 ">7</button>
+                        <button class="charKey" date-value=" 8 ">8</button>
+                        <button class="charKey" date-value=" 9 ">9</button>
+                        <button class="charKey" date-value=" * ">*</button>
+                        <button class="charKey" date-value=" 4 ">4</button>
+                        <button class="charKey" date-value=" 5 ">5</button>
+                        <button class="charKey" date-value=" 6 ">6</button>
+                        <button class="charKey" date-value=" - ">-</button>
+                        <button class="charKey" date-value=" 1 ">1</button>
+                        <button class="charKey" date-value=" 2 ">2</button>
+                        <button class="charKey" date-value=" 3 ">3</button>
+                        <button class="charKey" date-value=" + ">+</button>
+                        <button class="charKey" date-value=" 0 ">0</button>
+                        <button class="charKey" date-value=" . ">.</button>
+                        <button class="charKey" date-value=" % ">Mod</button>
+                </div>
+                <section class="flex align-center justify-between">
+                        <button id="copyToClipboard">Copy</button>
+                        <input type="text" id="result" disabled>
+                </section>
+        </main>
 </body>
 </html>
