--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
                 <input type="text" id="input">
                 <div id="keys">
                         <button id="clear">C</button>
-                        <button class="charKey" date-value=" ( ">(</button>
-                        <button class="charKey" date-value=" ) ">)</button>
-                        <button class="charKey" date-value=" / ">/</button>
-                        <button class="charKey" date-value=" 7 ">7</button>
-                        <button class="charKey" date-value=" 8 ">8</button>
-                        <button class="charKey" date-value=" 9 ">9</button>
-                        <button class="charKey" date-value=" * ">*</button>
-                        <button class="charKey" date-value=" 4 ">4</button>
-                        <button class="charKey" date-value=" 5 ">5</button>
-                        <button class="charKey" date-value=" 6 ">6</button>
-                        <button class="charKey" date-value=" - ">-</button>
-                        <button class="charKey" date-value=" 1 ">1</button>
-                        <button class="charKey" date-value=" 2 ">2</button>
-                        <button class="charKey" date-value=" 3 ">3</button>
-                        <button class="charKey" date-value=" + ">+</button>
-                        <button class="charKey" date-value=" 0 ">0</button>
-                        <button class="charKey" date-value=" . ">.</button>
-                        <button class="charKey" date-value=" % ">Mod</button>
+                        <button class="charKey" data-value=" ( ">(</button>
+                        <button class="charKey" data-value=" ) ">)</button>
+                        <button class="charKey" data-value=" / ">/</button>
+                        <button class="charKey" data-value="7">7</button>
+                        <button class="charKey" data-value="8">8</button>
+                        <button class="charKey" data-value="9">9</button>
+                        <button class="charKey" data-value="*">*</button>
+                        <button class="charKey" data-value="4">4</button>
+                        <button class="charKey" data-value="5">5</button>
+                        <button class="charKey" data-value="6">6</button>
+                        <button class="charKey" data-value="-">-</button>
+                        <button class="charKey" data-value="1">1</button>
+                        <button class="charKey" data-value="2">2</button>
+                        <button class="charKey" data-value="3">3</button>
+                        <button class="charKey" data-value="+">+</button>
+                        <button class="charKey" data-value="0">0</button>
+                        <button class="charKey" data-value=".">.</button>
+                        <button class="charKey" data-value="%">Mod</button>
                 </div>
                 <section class="flex align-center justify-between">
                         <button id="copyToClipboard">Copy</button>
