--- a/index.html
+++ b/index.html
@@ -24,18 +24,19 @@
                         <button class="charKey" data-value="7">7</button>
                         <button class="charKey" data-value="8">8</button>
                         <button class="charKey" data-value="9">9</button>
-                        <button class="charKey" data-value="*">*</button>
+                        <button class="charKey" data-value=" * ">*</button>
                         <button class="charKey" data-value="4">4</button>
                         <button class="charKey" data-value="5">5</button>
                         <button class="charKey" data-value="6">6</button>
-                        <button class="charKey" data-value="-">-</button>
+                        <button class="charKey" data-value=" - ">-</button>
                         <button class="charKey" data-value="1">1</button>
                         <button class="charKey" data-value="2">2</button>
                         <button class="charKey" data-value="3">3</button>
-                        <button class="charKey" data-value="+">+</button>
+                        <button class="charKey" data-value=" + ">+</button>
                         <button class="charKey" data-value="0">0</button>
-                        <button class="charKey" data-value=".">.</button>
-                        <button class="charKey" data-value="%">Mod</button>
+                        <button class="charKey" data-value=" . ">.</button>
+                        <button class="charKey" data-value=" % ">Mod</button>
+                        <button id="equal">=</button>
                 </div>
                 <section class="flex align-center justify-between">
                         <button id="copyToClipboard">Copy</button>
