--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <h1>Calc.Js</h1>
                         <button id="themeSwitcher">Switch Theme Dark / Light</button>
                 </header>
-                <input type="text" id="input">
+                <input type="text" id="input" required>
                 <div id="keys">
                         <button id="clear">C</button>
                         <button class="charKey" data-value=" ( ">(</button>
